0.7.1/_sources/gallery/image_points_3d.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/image_points_3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_image_points_3d.py:


Image points 3D
===============

Display points overlaid on a 3D image

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-27



.. image-sg:: /gallery/images/sphx_glr_image_points_3d_001.png
   :alt: image points 3d
   :srcset: /gallery/images/sphx_glr_image_points_3d_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    from skimage import data, feature, filters

    import napari

    cells = data.cells3d()
    nuclei = cells[:, 1]
    smooth = filters.gaussian(nuclei, sigma=10)
    pts = feature.peak_local_max(smooth)
    viewer = napari.Viewer(ndisplay=3)
    membranes, nuclei = viewer.add_image(
        cells, channel_axis=1, name=['membranes', 'nuclei']
    )
    viewer.add_points(pts)
    viewer.camera.angles = (10, -20, 130)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_image_points_3d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: image_points_3d.ipynb <image_points_3d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: image_points_3d.py <image_points_3d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: image_points_3d.zip <image_points_3d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
